--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "uuid": "^9.0.1"
   },
   "name": "tp1_node",
@@ -18,4 +19,3 @@
   "author": "darasow",
   "license": "ISC"
 }
-
