--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "dependencies": {
     "axios": "^1.6.2",
     "countries-list": "^3.0.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "name": "tp1_node",
   "version": "1.0.0",
